Policy WebUI: Fix vertical align of 'Show policies with no value set' checkbox
Before: http://screen/7bzBJpDMwKszF8A
After: http://screen/5cuRajTAcs39EjF

Bug: 1070190
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2562740
Auto-Submit: Yann Dago <ydago@chromium.org>
Commit-Queue: Esmael Elmoslimany <aee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#832077}

--- a/components/policy/resources/webui/policy.css
+++ b/components/policy/resources/webui/policy.css
@@ -141,11 +141,18 @@ body > header {
 
 .show-unset-checkbox,
 .search-field-container {
+  flex: 0 1 200px;
   margin-inline-start: auto;
 }
 
-.search-field-container {
-  flex: 0 1 200px;
+.show-unset-checkbox > label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.show-unset-checkbox > label > input {
+  margin: 0;
 }
 
 .no-policy:not([hidden]) {
